--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         </div>
         <!-- Navbar Part2 Buttons -->
         <div class="flex justify-center gap-4 my-8">
-          <button class="btn btn bg-specialgreen px-6">Donation</button>
-          <button class="btn btn bg-white px-6">History</button>
+          <button id="donateButton" class="btn btn bg-specialgreen px-6">Donation</button>
+          <button id="historyButton" class="btn btn bg-white px-6">History</button>
         </div>
       </nav>
       <!-- hero cards section -->
-      <section class="hidden mx-36 flex flex-col gap-8 mb-20">
+      <section id="donationSection" class="hidden mx-36 flex flex-col gap-8 mb-20">
         <!-- Card 1 -->
         <div class="hero border border-borderclr rounded-lg p-8">
           <div class="hero-content flex-col lg:flex-row gap-10">
@@ -158,7 +158,7 @@
         </div>
       </section>
       <!-- History section -->
-      <section class="hidden mx-36 flex flex-col gap-5 my-10">
+      <section id="historySection" class="hidden mx-36 flex flex-col gap-5 my-10">
         <div class="border rounded-lg border-gray-200 p-8">
           <h6 class="text-lg">
             96500 Taka is Donated for famine-2024 at Feni, Bangladesh
@@ -184,5 +184,7 @@
       <!-- footer -->
       <footer class="h-36 bg-specialyellow"></footer>
     </main>
+    <script src="./repeatfunctions.js"></script>
+    <script src="./indexjava.js"></script>
   </body>
 </html>
