added functions for redirecting to history+donation+blog page

--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
         <div
           class="navbar bg-base-100 flex justify-around pt-6 pb-16 bg-specialyellow"
         >
-          <button class="btn btn-sm bg-specialgreen px-6">Blog</button>
+          <button class="btn btn-sm bg-specialgreen px-6"><a href="./index.html">Home</a></button>
           <div class="gap-5">
             <img src="./assets/logo.png" alt="" />
             <a class="text-lg font-bold">Donate Bangladesh</a>
