--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div
           class="navbar bg-base-100 flex justify-around pt-6 pb-16 bg-specialyellow"
         >
-          <button class="btn btn-sm bg-specialgreen px-6">Blog</button>
+          <button class="btn btn-sm bg-specialgreen px-6"><a href="./blog.html">Blog</a></button>
           <div class="gap-5">
             <img src="./assets/logo.png" alt="" />
             <a class="text-lg font-bold">Donate Bangladesh</a>
@@ -52,7 +52,7 @@
         </div>
         <!-- Navbar Part2 Buttons -->
         <div class="flex justify-center gap-4 my-8">
-          <button id="donateButton" class="btn btn bg-specialgreen px-6">Donation</button>
+          <button id="donateButton" class="btn btn bg-white px-6">Donation</button>
           <button id="historyButton" class="btn btn bg-white px-6">History</button>
         </div>
       </nav>
