--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <img src="./assets/logo.png" alt="" />
             <a class="text-lg font-bold">Donate Bangladesh</a>
           </div>
-          <div class="gap-3">
+          <div class="gap-1">
             <img src="./assets/coin.png" alt="" />
-            <p>5500 <span>BDT</span></p>
+            <p id="balance" >5500</p><span>BDT</span>
           </div>
         </div>
         <!-- Navbar Part2 Buttons -->
@@ -65,7 +65,7 @@
             <div class="flex flex-col gap-4">
               <div class="btn cursor-default w-1/3 text-base font-light">
                 <img class="h-3/4" src="./assets/coin.png" alt="" />
-                <p>1000</p>
+                <p id="sectionBalance" >1000</p>
                 <span>BDT</span>
               </div>
               <h1 class="text-xl font-bold">
@@ -81,10 +81,11 @@
               </p>
               <input
                 type="text"
+                id="inputField1"
                 placeholder="Write Donation Amount"
                 class="input font-light text-gray-500 input-bordered w-full max-w-full"
               />
-              <button class="btn btn-block bg-specialgreen">Donate Now</button>
+              <button id="donateNow" class="btn btn-block bg-specialgreen">Donate Now</button>
             </div>
           </div>
         </div>
