added functions for one card, now experimenting

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p id="sectionBalance" >1000</p>
                 <span>BDT</span>
               </div>
-              <h1 class="text-xl font-bold">
+              <h1 id="title-1" class="text-xl font-bold">
                 Donate for Flood at Noakhali, Bangladesh
               </h1>
               <p class="font-light text-gray-500">
@@ -160,18 +160,9 @@
       </section>
       <!-- History section -->
       <section id="historySection" class="hidden mx-36 flex flex-col gap-5 my-10">
-        <div class="border rounded-lg border-gray-200 p-8">
-          <h6 class="text-lg">
-            96500 Taka is Donated for famine-2024 at Feni, Bangladesh
-          </h6>
-          <br />
-          <p class="font-light">
-            Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)
-          </p>
-        </div>
       </section>
       <!-- message board -->
-      <div class="hidden fixed top-0 left-0 z-50 w-full h-full flex items-center justify-center bg-black bg-opacity-50">
+      <div id="alert" class="hidden fixed top-0 left-0 z-50 w-full h-full flex items-center justify-center bg-black bg-opacity-50">
         <div
           class="text-center rounded-lg bg-white px-32 py-8 flex flex-col justify-center items-center gap-5 my-7"
         >
@@ -179,7 +170,7 @@
           <img class="w-max" src="./assets/coin.png" alt="" />
           <p>You have donated for humankind</p>
           <h3 class="font-bold text-2xl">Successfully</h3>
-          <button class="btn">Close Confirmation</button>
+          <button id="closeAlert" class="btn">Close Confirmation</button>
         </div>
       </div>
       <!-- footer -->
