added js and function for all three cards, responsive work begins

--- a/backup.html
+++ b/backup.html
@@ -96,10 +96,10 @@
             <div class="flex flex-col gap-4">
               <div class="btn cursor-default w-1/3 text-base font-light">
                 <img class="h-3/4" src="./assets/coin.png" alt="" />
-                <p id="sectionBalance2" >600</p>
+                <p>600</p>
                 <span>BDT</span>
               </div>
-              <h1 id="title-2" class="text-xl font-bold">
+              <h1 class="text-xl font-bold">
                 Donate for Flood Relief in Feni,Bangladesh
               </h1>
               <p class="font-light text-gray-500">
@@ -112,12 +112,12 @@
                 towards making a real difference. Please consider donating today
                 to assist those in urgent need.
               </p>
-              <input id="inputField2"
+              <input
                 type="text"
                 placeholder="Write Donation Amount"
                 class="input font-light text-gray-500 input-bordered w-full max-w-full"
               />
-              <button id="donateNow2" class="btn btn-block bg-specialgreen">Donate Now</button>
+              <button class="btn btn-block bg-specialgreen">Donate Now</button>
             </div>
           </div>
         </div>
@@ -131,10 +131,10 @@
             <div class="flex flex-col gap-4">
               <div class="btn cursor-default w-1/3 text-base font-light">
                 <img class="h-3/4" src="./assets/coin.png" alt="" />
-                <p id="sectionBalance3" >1000</p>
+                <p>1000</p>
                 <span>BDT</span>
               </div>
-              <h1 id="title-3" class="text-xl font-bold">
+              <h1 class="text-xl font-bold">
                 Aid for Injured in the Quota Movement
               </h1>
               <p class="font-light text-gray-500">
@@ -150,11 +150,10 @@
               </p>
               <input
                 type="text"
-                id="inputField3"
                 placeholder="Write Donation Amount"
                 class="input font-light text-gray-500 input-bordered w-full max-w-full"
               />
-              <button id="donateNow3" class="btn btn-block bg-specialgreen">Donate Now</button>
+              <button class="btn btn-block bg-specialgreen">Donate Now</button>
             </div>
           </div>
         </div>
@@ -181,3 +180,5 @@
     <script src="./indexjava.js"></script>
   </body>
 </html>
+
+<!-- 1:41 am saved -->
