added faq questions answers by myself

--- a/blog.html
+++ b/blog.html
@@ -59,28 +59,28 @@
             <input type="radio" name="my-accordion-3" checked="checked" />
             <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>Dom is like a structure of the HTML, Using it we can see, edit , delete html elements easily</p>
             </div>
           </div>
           <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>We can select an element from the dom using specific ID, tag or class name. We can also use querySelector and querySelectorAll</p>
             </div>
           </div>
           <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why is it useful?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>By using event delegation we can use one event listener on parent element to manage multiple child elements of it</p>
             </div>
           </div>
           <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles using the DOM?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>By using getAttribute(),setAttribute() and removeAttribute() and for adding or removing classes using classList we can manipulate an element's attributes and styles using the dom </p>
             </div>
           </div>
       </section>
